--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
      <style>
         ol{
             color: brown;
+            line-height: 25px;
         }
         ul{
             color: brown;
             word-spacing: 5px;
             letter-spacing: 5px;
+            line-height: 20px;
+
         }
         span{
             text-decoration: line-through;
